# strecku

./: .api-linter.yml  .gitignore  .gitmodules  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  tools.go  tools.mk
.github/workflows/: ci.yml
api/: prototool.yaml
api/v1/: money.proto  product.proto  product_api.proto  role.proto  role_api.proto  store_api.proto  strecku.pb.go  strecku_grpc.pb.go  user.proto  user_api.proto
auth/: basic.go  basic_test.go  bearer.go  bearer_test.go
backend/: go.mod  go.sum
cmd/importer/: go.mod  go.sum  main.go
cmd/server/: main.go
configs/: integration_test.toml
database/: 000001_create_table_users.up.sql  000002_create_table_stores.down.sql  000002_create_table_stores.up.sql
deployments/compose/: integration_test.yml
internal/config/: BUILD.bazel  config.go  config_test.go
internal/config/testdata/: invalid_db_conn_string.toml  invalid_db_conn_timeout.toml  invalid_logger_level.toml  invalid_syntax.toml  valid.toml
internal/database/: container.go  container_test.go  open.go  tx.go
internal/dockertest/: client.go  client_test.go  pool.go  pool_test.go
internal/inject/: sql.go  wire_gen.go  zap.go  zap_test.go
internal/provide/: BUILD.bazel  config.go  config_test.go  pgx.go  sql.go  sql_integration_test.go  zap.go  zap_test.go
internal/service/: service.go  (+16 more)
migrations/: 001_create_domains.down.sql  001_create_domains.up.sql  002_create_table_users.up.sql  003_create_table_stores.up.sql  004_create_table_has_role.down.sql  004_create_table_has_role.up.sql
resourcename/: format.go  format_test.go
scripts/: git-verify-no-diff.bash  keep-master-green.bash
server/: server.go  server_test.go
stores/: name_test.go  repository.go  repository_test.go  validate.go  validate_test.go
testing/: go.mod  go.sum  store_api_test.go  suite_test.go  user_api_test.go
testresources/: memberships.go  payments_test.go  products_test.go  purchases.go  stores.go  users.go
users/: name.go  name_test.go  repository.go  repository_test.go  validate.go  validate_test.go
(+150 files in other folders)
