load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/Saser/strecku/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/viper:go_default_library",
        "@com_github_mitchellh_mapstructure//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
