load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "pgx.go",
        "zap.go",
    ],
    importpath = "github.com/Saser/strecku/internal/provide",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_jackc_pgx_v4//log/zapadapter:go_default_library",
        "@com_github_jackc_pgx_v4//pgxpool:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)
